--- a/Project_SIA_RPL_T/nbproject/project.properties
+++ b/Project_SIA_RPL_T/nbproject/project.properties
@@ -28,7 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.java-modules=C:\\Program Files\\NetBeans 8.1\\java\\modules
+file.reference.ojdbc14.jar=C:\\Program Files\\NetBeans 8.1\\java\\modules\\ojdbc14.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -38,7 +38,7 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.java-modules}
+    ${file.reference.ojdbc14.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
