Update 16 Oktober 2016 5.33 PM ayoo modul 2

--- a/Project_SIA_RPL_T/web/WEB-INF/web.xml
+++ b/Project_SIA_RPL_T/web/WEB-INF/web.xml
@@ -6,7 +6,7 @@
     </servlet>
     <servlet>
         <servlet-name>LoginCheck</servlet-name>
-        <servlet-class>Servlet.LoginCheckInput</servlet-class>
+        <servlet-class>Servlet.LoginCheck</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>SiswaServlet</servlet-name>
